# worm

./: .gitignore  CMakeLists.txt  Makefile  README.md  apple.cpp  apple.h  main.cpp  worm.cpp  worm.h
include/: config.h  worm.h
src/: apple.cpp  main.cpp  worm.cpp
